refactor: separate coinjoin clustering

--- a/Notebooks/cj_analysis.ipynb
+++ b/Notebooks/cj_analysis.ipynb
@@ -967,9 +967,7 @@
    ],
    "source": [
     "tx = chain.tx_with_hash(\"253d7fce540ec3cfa3acc34704d0e23719beb4e3b9b577113b55f179a0f44208\")\n",
-    "print(tx.is_wasabi1_conjoin)\n",
-    "# for o in tx.outputs:\n",
-    "#     print(o.address.address_string == 'bc1qs604c7jv6amk4cxqlnvuxv26hv3e48cds4m0ew')\n"
+    "print(tx.is_wasabi1_conjoin)"
    ]
   },
   {
@@ -1203,17 +1201,12 @@
     "label_result_mapping = {x: set(map(lambda z: z[0], filter(lambda z: len(z[4]) == 0, y))) for x, y in zip(labels, results)}\n",
     "\n",
     "for label, value in zip(labels, results):\n",
-    "# for label, values in mixed.items():\n",
-    "#     print(label)\n",
     "    for txid, in_cjs, out_cjs, value, pairs in value:\n",
     "#     for txid in values:\n",
     "        if len(pairs) != 0 and '-> Whirlpool' in label:\n",
     "            pass\n",
     "        elif len(pairs) != 0:\n",
     "            continue\n",
-    "            \n",
-    "#         if txid in label_result_mapping[label]:\n",
-    "#             continue\n",
     "            \n",
     "        tx = chain.tx_with_hash(txid)\n",
     "            \n",
@@ -1227,12 +1220,10 @@
     "            \"hop_tx_cj_pairs\": {x: y for x, y in pairs}\n",
     "        }\n",
     "        \n",
-    "#         output_json[txid] = values[txid]\n",
     "        output_json.append(r)\n",
     "    print(len(output_json))\n",
     "        \n",
     "        \n",
-    "# print(len(output_json))\n",
     "with open('/mnt/dumplings/one_hop_flows.json', 'w') as f:\n",
     "    json.dump(output_json, f)"
    ]
@@ -1486,112 +1477,6 @@
     "        print(tx.input_count, tx.output_count)\n",
     "        \n",
     "    print('--' * 20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "803c92a7-2633-4f79-8ea5-b61a2d1efd5d",
-   "metadata": {},
-   "source": [
-    "# I can't anymore\n",
-    "\n",
-    "Here I try to do the clustering again"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d9c2dbd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 14min 33s, sys: 1min 47s, total: 16min 21s\n",
-      "Wall time: 2min 23s\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "one_random_wp_cj = chain.tx_with_hash(\"9ea3e5d217c76e6be6ace7fe4fb3622976103466de81d2b02cd87c54f9e91a2f\")\n",
-    "\n",
-    "# clusterer = blocksci.cluster.ClusterManager(str(cluster_directory / \"fr\"), chain)\n",
-    "\n",
-    "\n",
-    "%time clusterer = blocksci.cluster.ClusterManager.create_coinjoin_clustering(chain, 0, len(chain), \"/mnt/anal/fr/ww2_2/\", overwrite=True, coinjoin_type=\"whirlpool\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "2e72f0ef-b2f5-4af6-8597-f48002c590c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n",
-      "bc1qqp0346cszv9wymgpns9canqttuazmhgz4r67gr\n",
-      "bc1qtwen0flmynfh324t64cs42dsslhrd72xpvc3re\n",
-      "bc1qvsnfprcnv09lmyv3dljjflc0kjur2uaasy5c58\n",
-      "bc1qkq8v6x35ywfwf8slr6j6y4czqqag0lz3fac3kv\n",
-      "bc1qxzat6pfh95g85zpysuxw52nutnw6nn6g96vlag\n",
-      "bc1q7v9dtunx3f8jd66uqz6vrcp9uq3wyfd0hnyr9j\n",
-      "bc1q66zzn0fc2wwhr4nuwdzlcl5eslw8qpufeqcyd9\n",
-      "bc1qhlfq4zk0h2yukr344q5l3kg3f2yml9jw7kt030\n",
-      "bc1qeweamqqafrd5ku9c0clehucg45sut4gjdzzvrs\n",
-      "bc1q4wnn6u3ufn4cxttxpl9j8qz3m652pztrnjht4e\n",
-      "bc1qx3hyqdml6zq9m0qs93t6j3w7cu2mmtyget0l53\n",
-      "bc1qs82fe6dt3cd5q3txqca0u8kvvkzzxm4pmptjus\n",
-      "bc1qk60hljcejrn958rkththg362q5spnxh8r7zjjs\n",
-      "bc1qnmgppypp0nmc9ag6gt4argr0pwwuw8838n6z0e\n",
-      "bc1qarlkgd2xhxyjngeu74gu6cg5vxvqxp2gdmcrcw\n",
-      "bc1qcvd57u60tkl4x9an4629qruetukx3eupxw55y7\n",
-      "bc1qg9xepp0dz0rhmqm6vz27zq0ykh43vt02ej40yh\n",
-      "bc1qgcnusx0c37t0rxvsrycl8r3u5t4e8lhurxxghs\n",
-      "bc1q36whjkxq68gw6dqwqcrv9xgfcrd5nacxk7unsv\n",
-      "bc1qrurh38dysxulstemmq3hvn59de8mhc9846mfee\n",
-      "bc1q6fdqf6mhk5a7weuf9gxss63nsvhchr24xa904u\n",
-      "2350697238\n",
-      "AA\n"
-     ]
-    }
-   ],
-   "source": [
-    "consolidation: blocksci.cluster.Cluster = clusterer.cluster_with_address(one_random_wp_cj.outputs[-2].spending_tx.outputs[0].address)\n",
-    "\n",
-    "print(consolidation.address_count())\n",
-    "\n",
-    "for address in consolidation.addresses.to_list():\n",
-    "    print(str(address))\n",
-    "\n",
-    "\n",
-    "print(len(clusterer.clusters()))\n",
-    "\n",
-    "print(\"AA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9dc8106e-8580-47cc-a13b-7ce812babb77",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Block(tx_count=3061, height=839164, header_hash=0000000000000000000128c51f1198597b06af19bdd633849d3af2adf7509fe2, version=629710848, timestamp=1713089976, bits=386089497, nonce=3992381634)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(one_random_wp_cj.block)\n",
-    "# 2350869805"
    ]
   }
  ],
