--- a/Notebooks/Clusters.ipynb
+++ b/Notebooks/Clusters.ipynb
@@ -30,10 +30,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "22a7670e-9166-4571-b7d0-47ec9c16e74f",
+   "cell_type": "markdown",
+   "id": "b33d9cf3-d5dd-49cb-a964-2e2754602f61",
    "metadata": {},
+   "source": [
+    "# Whirlpool clusters\n",
+    "`9ea3e5d217c76e6be6ace7fe4fb3622976103466de81d2b02cd87c54f9e91a2f` should have 21 clustered addresses by the simple one output heuristics\n",
+    "`00ab23721356a159b695060b3975469fa0703e55398e9123ef59d2a5b94b1058` should have 567 addresses clustered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "22a7670e-9166-4571-b7d0-47ec9c16e74f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -45,8 +57,8 @@
       "Preparing to serialize cluster data\n",
       "Serializing cluster data\n",
       "Serialized\n",
-      "CPU times: user 8min 57s, sys: 2min 15s, total: 11min 13s\n",
-      "Wall time: 35.6 s\n"
+      "CPU times: user 8min 58s, sys: 2min 5s, total: 11min 4s\n",
+      "Wall time: 35.7 s\n"
      ]
     }
    ],
@@ -60,7 +72,7 @@
     "\n",
     "# clusterer = blocksci.cluster.ClusterManager(str(cluster_directory / \"fr\"), chain)\n",
     "\n",
-    "%time clusterer = blocksci.cluster.CoinjoinClusterManager.create_clustering(chain, 0, len(chain), \"/mnt/anal/clustering/whirlpool/\", overwrite=True, coinjoin_type=\"whirlpool\")\n"
+    "%time clusterer = blocksci.cluster.CoinjoinClusterManager.create_clustering(chain=chain, start=0, stop=len(chain), output_path=\"/mnt/anal/clustering/whirlpool/\", overwrite=True, coinjoin_type=\"whirlpool\", heuristic=\"OneOutputConsolidation\")\n"
    ]
   },
   {
@@ -131,6 +143,14 @@
     "s = {\"3H7rzruh2wLkCF2pVfn3v1po6aWES2f7iB\", \"39SZ4LKMuKy2vJ63r46yqnTub7ciAvY2B3\", \"3NrUFDF1uqLi7d5UHUD7qoxZcAwLszbXpT\", \"3FyGsPeKRXSazXMre5zvcwFqVrc86gNbLP\", \"3EtZBuGSa8oUT7jxo4S9Bqws24eJ8cgP24\", \"38dsUSUSVw7S2cwX81R9Ex2yqUPGU7EGSE\", \"3GHuXuCJpesrCMvVSeVQatXgxod6f9jq65\", \"3KyWzoPbWyvBVekauAd96h5LsrJbDTVs48\", \"3NqG5tio4G2YeLPtzWSVD9YWNL7Mx3Af5W\", \"32mFyKRHGmSSG8ELvnr8eUW5y2CEroFWRt\", \"3AFjEf7e2uiq2kyZJouASEn3hdxGQwQhAs\", \"3HJasiWwPipfheoPWw4b2KCWGYJnfyESsS\", \"3H9ECmG59doCbsGwT2U9ipH2zKDXc33Mb1\", \"3NCyJpLcbCntj4ycAa6mPwzDhDx7raHkW4\", \"3EfmDALTK4HL6UAfZbSTkCY6KmTpBDkMd3\", \"34GDGGvvmas8vZvspL4xoJDbnjcVVSyDGg\", \"3E865Edvwvv2f9SadroyPkuD8NWsnnh12h\", \"3Gxxz3zwRPSiwJELLn12VuXCdWUSuc4Jqe\", \"333rRogJJhnbhTZWxH7ahx7mgpBnvSh77k\", \"3BZDdyUPbg1eNTV6R9xJYUsEq6NR6rj2rE\", \"32thrw17kHJcAeUgeMEuuwxn2WZzF1UZqe\", \"35UzUksackYfJYeGg3RBSkKpx53YJQshCQ\", \"379gaVDJ8QKJ3JZpqsd54w2YAU9dsezyS4\", \"36AxQ412DjtZYiaGHWBS2yhtLYzJTiG5ip\", \"3BDaQUuSEfwmGTLeJZmUYtaeWWuAmrYoBv\", \"3B8H61BWrbt2XgNYKjqeUbteXxz5ZfVzwK\", \"35Bvp5N9qjp4Cxr7ntmEQv5rngZhe1RRDx\", \"36Q8uRcVpcvkGjfDbNBESmKtYygtSVkq6h\", \"3D4GWmZXSzvqkZR18vfJoW6HKqHCp6RM6a\", \"3Jy9bQ3xaXWSrVfmyrNSrhQjxKwogSTphF\", \"37y7iY4aLD5kQ4hf4zGYgD5dHqJK9z5K6v\", \"3QSbqjR4aWAeNxgZyvY4G59KPpLiZkSobL\", \"361nuo9aqPvsEMNZ23ZEgZooWdoNogmBWA\", \"39nWFQ9UjFxSuCU2rQo2eTr7HpA8TvHGuA\", \"3KCUnnrKeBnZDaHFi4HzimAPjc6BiXFoPr\", \"3JrqkJz6rC9Hcd5qjm8XJbqYFga9nN4GAs\", \"38QQbdgboThzMsuK1YzSL5nEVjZvdLBhWC\", \"3QDQeyFuYvumJjUThNFwUWEQHmwnaja2T4\", \"3Bwj1esSNx9qwkJyYPRqi4eZ9puzNWDgN3\", \"3CmTJW1rsCGdiDrabCL2SJo6i84Htwk7M3\", \"3MQu2hzCfQM33Xz6PN6rg9jRTZvrYVeU2R\", \"38ihLYWdpjDyrBeuu5ndps8SWipmPHcDE6\", \"3QYzQ1LCRdNFbupM9QipMQnZCfe6dh8PEY\", \"3AMPWEG7rpRzc2mtNAxN9E1CD4Vff7ux1d\", \"3G72zVkYH1PD2HbMKvVHjmrVZiMMpaJGeS\", \"3EQjsa37d1ePVCBR8TfiAZ9WhbYGypeWEA\", \"3GP87BRQtvzTkVPKzhXgVnft9QpZrZRUxr\", \"3L58gWsGyizovHfzUgXiaKsJRR5mdFJ2XD\", \"3LxEMPDjhcsyrC9Dk1mVpn4AFmLG5X97VV\", \"3PVbHejz8ttTUqHTBAYjzdgLBcsDLkH3fN\", \"3AJAMUtRyZE6SNFRfY19dFcFFs8T6rG8ZJ\", \"3GG32oH3kaU8WYK38vuwesUbSoq9KSzVAf\", \"353bvSADaPRnr8owqQzkysN1wPCPLvj6fn\", \"343sJ9MfCnn3v1zo4minZzhM8UcqCxEW8y\", \"37zdULp8aHmkHFuP3vts3DwGEEZtvuM7t6\", \"3Jv8kK6g8izMUZYQdRBX18mVKTjrQGNmQm\", \"33W8F8ufZEwmRS1H9eSKdfo4KyvPw4Rt7c\", \"3EMSoNRT6JVNVU5eeMJBtQgQxPQeGrAkJs\", \"3BPp7i6GJt8KaRMqLFxEg4HrKQWGg74vvP\", \"3FJ8nouCg3JHBPw9B9f6WDCWsQ8UrHn5rb\", \"3Q1tVt81o7zp3BVP6UY2JAXZonSB9PFBWy\", \"39iPMkYdxscXmePnjur3VpKU2JPG8ZKTJ1\", \"38CfEdeAYvBNzkCrUPAXT8BT4k8pXQUpMR\", \"3B6otXTi8ekZgY4VFybmPv2j9LToHFNHDt\", \"3P2fwiPnQxtZR2ba8J4EDsNLAqu5SEKL4W\", \"3ESJdTRKCqDbKu7tG2jCeCbSw59gTzA1GZ\", \"3FsdGgGQUVWbLwqRQpHfa3xL68XqxGnXcX\", \"3PoN4wXzLy61b3u2585b2UwkwSxFnVNYDv\", \"3KqrrwY83Fy2hCnVB1EFF74xvXVmaHuW79\", \"33FNudmSNr3wYb6jyaPS2yURar2SunNxNy\", \"3J4JoKWapWwK7PoSee3gQzgDiVVhViYAYJ\", \"3AhsUnWu7hwNHyntHZZmTU65wihh9bEfd6\", \"32y1ogyNNvjHo87D5pT48j8G8ppGDeYY69\", \"38UXvHchd1HRohgspQaHQeCLt2M5gXatKg\", \"3AFjEf7e2uiq2kyZJouASEn3hdxGQwQhAs\", \"3FR3diXoNLUhbW3mFC9ZDSVwkyjtPCU8Fn\", \"343Q125WjCnLjC9JKQUsVzd3t5u3fbVniA\", \"3FjcAVpQPfPiyGDLjTr1v4xhGaFR1nX3mY\", \"3P8z2jMTzuwpV5JAzL8FWZ61VXXN2se4me\", \"3F8L9EVFb5oF8HkLwRbPJeALbMhCZx6rcy\"}\n",
     "print(a)\n",
     "print(len(s), len(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2362a4e-d126-42fd-8520-d2b7d31743a4",
+   "metadata": {},
+   "source": [
+    "# Wasabi1 clustering\n"
    ]
   },
   {
