--- a/Notebooks/Clusters.ipynb
+++ b/Notebooks/Clusters.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "22a7670e-9166-4571-b7d0-47ec9c16e74f",
    "metadata": {
     "scrolled": true
@@ -52,13 +52,17 @@
      "output_type": "stream",
      "text": [
       "bc1qprpasvx70nzam6ym3jnpgr4vmr53zmeydep0mz\n",
+      "Using heuristic: None\n",
+      "Using heuristic: OneOutputConsolidation\n",
+      "Using heuristic: OneInputConsolidation\n",
       "Collected 5135482 addresses\n",
+      "Creating disjoint sets of size 5135482\n",
       "Created disjoint sets of size 5135482\n",
       "Preparing to serialize cluster data\n",
       "Serializing cluster data\n",
       "Serialized\n",
-      "CPU times: user 8min 58s, sys: 2min 5s, total: 11min 4s\n",
-      "Wall time: 35.7 s\n"
+      "CPU times: user 8min 42s, sys: 2min 8s, total: 10min 51s\n",
+      "Wall time: 35.6 s\n"
      ]
     }
    ],
@@ -70,48 +74,31 @@
     "address_im_looking_for = one_random_wp_cj.outputs[1].spending_tx.outputs[0].address\n",
     "print(address_im_looking_for)\n",
     "\n",
+    "start = one_random_wp_cj.block_height\n",
+    "stop = one_random_wp_cj.block_height + 1\n",
+    "\n",
+    "start = 0\n",
+    "stop = len(chain)\n",
+    "\n",
     "# clusterer = blocksci.cluster.ClusterManager(str(cluster_directory / \"fr\"), chain)\n",
     "\n",
-    "%time clusterer = blocksci.cluster.CoinjoinClusterManager.create_clustering(chain=chain, start=0, stop=len(chain), output_path=\"/mnt/anal/clustering/whirlpool/\", overwrite=True, coinjoin_type=\"whirlpool\", heuristic=\"OneOutputConsolidation\")\n"
+    "%time clusterer = blocksci.cluster.CoinjoinClusterManager.create_clustering(  \\\n",
+    "    chain=chain, \\\n",
+    "    start=start, \\\n",
+    "    stop=stop, \\\n",
+    "    output_path=\"/mnt/anal/clustering/whirlpool_out/\", \\\n",
+    "    overwrite=True, \\\n",
+    "    coinjoin_type=\"whirlpool\", \\\n",
+    "    heuristics=[\"OneOutputConsolidation\", \"OneInputConsolidation\"] \\\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "822a285b-1492-48f8-be33-3f58bd9cd7ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7735585\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[0;32m<timed exec>:1\u001b[0m\n",
-      "File \u001b[0;32m<timed exec>:1\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'bigger_than_one' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(clusterer\u001b[38;5;241m.\u001b[39mclusters()))\n\u001b[1;32m      6\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbigger_than_one = [cluster for cluster in clusterer.clusters() if cluster.address_count() > 1]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mbigger_than_one\u001b[49m))\n\u001b[1;32m      8\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbigger_than_one.sort(key=lambda c: c.balance(), reverse=True)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m cluster \u001b[38;5;241m=\u001b[39m bigger_than_one[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'bigger_than_one' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "clusterer = blocksci.cluster.ClusterManager(\"/mnt/anal/clustering/wasabi1/\", chain)\n",
     "\n",
