feat: everything everywhere all at once

--- a/Notebooks/Clusters.ipynb
+++ b/Notebooks/Clusters.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "22a7670e-9166-4571-b7d0-47ec9c16e74f",
    "metadata": {
     "scrolled": true
@@ -51,18 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bc1qprpasvx70nzam6ym3jnpgr4vmr53zmeydep0mz\n",
+      "bc1qxvsjlwnrhel0elpcv0tmhflrxl7t7hphgau3pf\n",
       "Using heuristic: None\n",
       "Using heuristic: OneOutputConsolidation\n",
       "Using heuristic: OneInputConsolidation\n",
-      "Collected 5135482 addresses\n",
-      "Creating disjoint sets of size 5135482\n",
-      "Created disjoint sets of size 5135482\n",
-      "Preparing to serialize cluster data\n",
-      "Serializing cluster data\n",
-      "Serialized\n",
-      "CPU times: user 8min 42s, sys: 2min 8s, total: 10min 51s\n",
-      "Wall time: 35.6 s\n"
+      "Collected 16076035 addresses\n",
+      "CPU times: user 3min 43s, sys: 14.5 s, total: 3min 58s\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -70,7 +65,7 @@
     "# import random\n",
     "\n",
     "one_random_wp_cj = chain.tx_with_hash(\"9ea3e5d217c76e6be6ace7fe4fb3622976103466de81d2b02cd87c54f9e91a2f\")\n",
-    "one_random_wp_cj = chain.tx_with_hash(\"00ab23721356a159b695060b3975469fa0703e55398e9123ef59d2a5b94b1058\")\n",
+    "# one_random_wp_cj = chain.tx_with_hash(\"00ab23721356a159b695060b3975469fa0703e55398e9123ef59d2a5b94b1058\")\n",
     "address_im_looking_for = one_random_wp_cj.outputs[1].spending_tx.outputs[0].address\n",
     "print(address_im_looking_for)\n",
     "\n",
@@ -88,10 +83,73 @@
     "    stop=stop, \\\n",
     "    output_path=\"/mnt/anal/clustering/whirlpool_out/\", \\\n",
     "    overwrite=True, \\\n",
-    "    coinjoin_type=\"whirlpool\", \\\n",
+    "    coinjoin_type=\"wasabi2\", \\\n",
     "    heuristics=[\"OneOutputConsolidation\", \"OneInputConsolidation\"] \\\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d7929095-faf8-4a9a-a087-1fbd52b09ba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bc1qttdxayfzyup2gaw4dkdjz0smlwylmtzpy6a3e9\n",
+      "Using heuristic: None\n",
+      "Using heuristic: OneOutputConsolidation\n",
+      "Using heuristic: OneInputConsolidation\n",
+      "Using heuristic: TwoHopOutputThresholdConsolidation\n",
+      "Using heuristic: ThreeHopOutputThresholdConsolidation\n",
+      "Collected 2991384 addresses\n",
+      "Creating disjoint sets of size 2991384\n",
+      "Created disjoint sets of size 2991384\n",
+      "Preparing to serialize cluster data\n",
+      "Serializing cluster data\n",
+      "Serialized\n",
+      "CPU times: user 1min 47s, sys: 7.44 s, total: 1min 54s\n",
+      "Wall time: 20 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import random\n",
+    "\n",
+    "one_random_wp_cj = chain.tx_with_hash(\"9ea3e5d217c76e6be6ace7fe4fb3622976103466de81d2b02cd87c54f9e91a2f\")\n",
+    "one_random_wp_cj = chain.tx_with_hash(\"00ab23721356a159b695060b3975469fa0703e55398e9123ef59d2a5b94b1058\")\n",
+    "one_random_wp_cj = chain.tx_with_hash(\"021dc91d5d9d74babeed5dbf12a6287cbc4a46317afa357b45c46776940cf902\")\n",
+    "address_im_looking_for = one_random_wp_cj.outputs[1].spending_tx.outputs[0].address\n",
+    "print(address_im_looking_for)\n",
+    "\n",
+    "start = one_random_wp_cj.block_height\n",
+    "stop = one_random_wp_cj.block_height + 91302\n",
+    "\n",
+    "# start = 0\n",
+    "# stop = len(chain)\n",
+    "\n",
+    "# clusterer = blocksci.cluster.ClusterManager(str(cluster_directory / \"fr\"), chain)\n",
+    "\n",
+    "%time clusterer = blocksci.cluster.CoinjoinClusterManager.create_clustering(  \\\n",
+    "    chain=chain, \\\n",
+    "    start=start, \\\n",
+    "    stop=stop, \\\n",
+    "    output_path=\"/mnt/anal/clustering/whirlpool_out_threshold/\", \\\n",
+    "    overwrite=True, \\\n",
+    "    coinjoin_type=\"whirlpool\", \\\n",
+    "    heuristics=[\"OneOutputConsolidation\", \"OneInputConsolidation\", \"TwoHopOutputThresholdConsolidation\", \"ThreeHopOutputThresholdConsolidation\"] \\\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "503544ce-2227-4f5d-af48-1b8e9941208b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -142,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "59e90d5f-5ea8-4faa-9fe1-ff781a5c9513",
    "metadata": {},
    "outputs": [
@@ -150,15 +208,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "567\n",
-      "bc1qdnt4eafks89g9f5nhyvftxr3urljdranw9c8z2 False\n"
+      "1\n",
+      "bc1q5nat2fx3l3nsu5rql8fzzjqqkue0pz8cu7h72d False\n"
      ]
     }
    ],
    "source": [
-    "clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/whirlpool/\", chain)\n",
+    "clusterer = blocksci.cluster.CoinjoinClusterManager(\"/mnt/anal/clustering/whirlpool_out_threshold/\", chain)\n",
+    "one_random_wp_cj = chain.tx_with_hash(\"021dc91d5d9d74babeed5dbf12a6287cbc4a46317afa357b45c46776940cf902\")\n",
+    "address_im_looking_for = one_random_wp_cj.outputs[3].address\n",
     "\n",
-    "consolidation: blocksci.cluster.Cluster = clusterer.cluster_with_address(chain.address_from_string(\"bc1qgvwaz3m0cjxf68axgm7e9282uucls7dycksury\"))\n",
+    "# consolidation: blocksci.cluster.Cluster = clusterer.cluster_with_address(chain.address_from_string(\"bc1qfpcuqtv6739p3v9f6v3ahgxn2z00lgyaljx899\"))\n",
     "consolidation: blocksci.cluster.Cluster = clusterer.cluster_with_address(address_im_looking_for)\n",
     "\n",
     "\n",
@@ -168,7 +228,7 @@
     "    # print(address)\n",
     "    addr.add(str(address))\n",
     "\n",
-    "print(addr.pop(), \"bc1qcy828rc4cuh5z94ukd0pc527tv58hntenmed2q\" in addr)"
+    "print(addr.pop(), \"bc1qfpcuqtv6739p3v9f6v3ahgxn2z00lgyaljx899\" in addr)"
    ]
   }
  ],
