--- a/Notebooks/cj_analysis.ipynb
+++ b/Notebooks/cj_analysis.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ca445310",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Block(tx_count=3077, height=859425, header_hash=000000000000000000001ea21b463c4409080277fc235001ddfa2b844d5ed72a, version=560693248, timestamp=1725225507, bits=386082139, nonce=3205150816)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import blocksci\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +39,9 @@
     "    return chain.range(date)[0].height\n",
     "\n",
     "def get_block_height_range(start: str, end: str) -> Tuple[int, int]:\n",
-    "    return get_block_height_for_date(start), get_block_height_for_date(end)"
+    "    return get_block_height_for_date(start), get_block_height_for_date(end)\n",
+    "\n",
+    "chain.blocks[-1]"
    ]
   },
   {
