feat: separate notebooks for various purposes

--- a/Notebooks/BlockSci Demo.ipynb
+++ b/Notebooks/BlockSci Demo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# parser_data_directory should be set to the data-directory which the blocksci_parser output\n",
-    "chain = blocksci.Blockchain(parser_data_directory)"
+    "from pathlib import Path\n",
+    "\n",
+    "parser_data_directory = Path(\"/mnt/anal/config.json\")\n",
+    "\n",
+    "chain = blocksci.Blockchain(str(parser_data_directory))"
    ]
   },
   {
@@ -234,13 +238,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cluster_data_directory should be set to the directory containing the\n",
     "# output of the `clusterer` program\n",
-    "cm = blocksci.cluster.ClusterManager(cluster_data_directory, chain)"
+    "cm = blocksci.cluster.ClusterManager.create_clustering(\"/mnt/anal/simple_cluster/\", chain, 510000, 510100, should_overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cm.clusters()) > 1892728890"
    ]
   },
   {
@@ -252,7 +276,9 @@
     "# Find the balance held by the cluster containing the given address at block height 494653 \n",
     "address = chain.address_from_string(\"3EhLZarJUNSfV6TWMZY1Nh5mi3FMsdHa5U\")\n",
     "cluster = cm.cluster_with_address(address)\n",
-    "sum(address.balance(494653) for address in cluster.addresses) / 1e8"
+    "sum(address.balance(494653) for address in cluster.addresses) / 1e8\n",
+    "\n",
+    "# 1892728890"
    ]
   }
  ],
