feat: heuristics in python now

--- a/Notebooks/thesis.ipynb
+++ b/Notebooks/thesis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0509a403-8a6d-4995-bae1-19ce4c66f78e",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,27 @@
     "\n",
     "def get_block_height_range(start: str, end: str) -> Tuple[int, int]:\n",
     "    return get_block_height_for_date(start), get_block_height_for_date(end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "85e859ee-9252-400a-a647-69a13abb9994",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<blocksci.heuristics.coinjoin.c at 0x7f0a3114b570>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blocksci.heuristics.coinjoin.input_one_hop"
    ]
   },
   {
